# riso

./: .banditrc  .commitlintrc.yml  .editorconfig  .gitignore  .hadolint.yaml  .mcp.json  .mise.toml  .pre-commit-config.yaml  .releaserc.yml  .secrets.baseline  AGENTS.md  ALL_TASKS_COMPLETE.md  API_VERSIONING_COMPLETE.md  API_VERSIONING_IMPLEMENTATION_SUCCESS.md  AUDIT_REPORT.md  AUDIT_TASKS.json  AUDIT_TASKS.md  BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW_PLAN.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_REPORT.md  CONTRIBUTING.md  FINAL_COMPLETION_VERIFICATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MCP_IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_FEATURES.md  RATE_LIMITING_COMPLETION_SUMMARY.md  README.md  SECURITY.md  TASKS.md  TASK_COMPLETION_STATUS.md  codecov.yml  copier.yml  docker-compose.ci.yml  module_catalog.json  (+4 more)
.claude/prompts/: PYTHON_TESTING_AUDIT_PROMPT.md
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/prompts/: agentsmd.update.md  speckit.checklist.md  speckit.clarify.md  speckit.plan.md
.copilot/: mcp-config.json
.cursor/: cli.json  rules
.cursor/commands/: speckit.constitution.md  speckit.plan.md  speckit.tasks.md
.docker/: Dockerfile  Dockerfile.dev
.gemini/: settings.json
.gemini/commands/: speckit.implement.toml  speckit.specify.toml  speckit.tasks.toml  update.AGENTSmd.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/context/: copier-org_copier_llms.txt  fastapi-patterns.md  jlowin_fastmcp_llms.txt  pydantic_pydantic-settings_llms.txt  pydantic_pydantic_llms.txt  quality.md  workflows.md
.github/prompts/: speckit.analyze.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md
.github/workflows/: benchmark.yml  codeql.yml  gitleaks.yml  greetings.yml  labeler.yml  matrix-data.yml  pr-labeler.yml  pre-commit.yml  quality-matrix.yml  quality.yml  release-drafter.yml  release.yml  riso-deps-update.yml.jinja  riso-matrix.yml.jinja  riso-quality.yml.jinja  sbom.yml  stale.yml  template-ci.yml
.riso/: post_gen_metadata.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
api-versioning/: CHANGELOG.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  validate.py
api-versioning/config/: api_versions.yaml  api_versions.yaml.example
api-versioning/docs/: CONTRIBUTING.md
api-versioning/examples/: fastapi_app.py  starlette_app.py
api-versioning/src/api_versioning/: __init__.py
api-versioning/src/api_versioning/api/: __init__.py  discovery.py
api-versioning/src/api_versioning/core/: __init__.py  registry.py  router.py  version.py
api-versioning/src/api_versioning/handlers/: __init__.py  deprecation.py  error.py  prerelease.py
api-versioning/src/api_versioning/logging/: __init__.py  metrics.py
api-versioning/src/api_versioning/middleware/: __init__.py  parser.py  precedence.py
api-versioning/src/api_versioning/monitoring/: __init__.py  performance.py
api-versioning/src/api_versioning/observability/: __init__.py
api-versioning/src/api_versioning/reliability/: __init__.py  circuit_breaker.py  hot_reload.py
api-versioning/src/api_versioning/security/: __init__.py  audit.py  auth.py  rate_limit.py
api-versioning/src/api_versioning/utils/: __init__.py  helpers.py  semver.py  validation.py
api-versioning/tests/: __init__.py
api-versioning/tests/integration/: __init__.py  test_fastapi_integration.py
api-versioning/tests/unit/: test_parser.py  test_registry.py  test_version.py
deploy/: Dockerfile  README.md  fly.toml
docs/: COVERAGE.md  FEATURE_IMPLEMENTATION_GUIDE.md  NEXT_FEATURES_QUICK_REF.md  SECURITY_BEST_PRACTICES.md  changelog.md  conf.py  index.md  logging-quick-reference.md  quickstart.md.jinja  upgrade-guide.md.jinja
docs/adr/: precommit-commit-msg-ssot.md
docs/api/: index.md  scripts.md
docs/guides/: agent-scaffolding.md  ci-platforms.md  implementation-guide.md  index.md  matrix-data.md  mcp-to-cli-migration.md  quickstart.md  roadmap.md  session-persistence.md  testing-strategy.md  troubleshooting.md
docs/modules/: containers.md.jinja  matrix-data.md.jinja  quality.md.jinja  rate-limiting.md.jinja  workflows.md.jinja
docs/research/: saas-starter-research-prompts.md  saas-starter-synthesis-report.md
docs/tools/: fastmcp.md  index.md  riso-cli.md  riso-mcp-server.md
examples/: logging_demo.py
python/: .pylintrc  Makefile  pyproject.toml
python/docs/: conf.py  index.md
python/docs/_static/css/: lucide-icons.css
python/docs/_static/js/: custom.js
python/docs/api/: index.md
python/docs/guides/: implementation-guide.md  index.md  quickstart.md  roadmap.md
python/release/: __init__.py  changelog.py  models.py
python/tasks/: __init__.py  quality.py
python/tests/: conftest.py  smoke_test.py  test_cli.py  test_cli_commands.py  test_cli_config.py  test_cli_formatters.py  test_cli_plugins.py  test_quickstart.py
python/tests/api/: __init__.py  conftest.py  test_examples.py  test_health.py
python/tests/codegen/fixtures/sample_templates/simple-python/: main.py.j2  template.yml
quality/: coverage.cfg  makefile.quality  ruff.toml
quality/uv_tasks/: quality.py
samples/: README.md
samples/ai-tools-off/: copier-answers.yml
samples/api-monorepo/: copier-answers.yml
samples/api-python/: copier-answers.yml
samples/api-rate-limit/: README.md  (+1 more)
scripts/: __init__.py  docs-helper.sh  logging_config.py  render-samples.sh  subprocess_security.py  verify_rust_templates.py
specs/: NEXT_FEATURES.md  ideas.md
template/: COMPARISON_PAGE.md  copier.yml
tests/: __init__.py  conftest.py  test_precommit.py
tmp/: riso-ci-evidence.json
web/: .eslintrc.cjs  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
(+1645 files in other folders)
