[project]
name = "riso"
version = "1.1.4"
description = "Modular Copier-based project template for Python and Node.js applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Riso Template Working Group"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "loguru>=0.7.0",
]

[project.scripts]
riso-mcp = "riso.mcp.server:main"

[project.entry-points."fastmcp.servers"]
riso = "riso.mcp.server:mcp"

[project.urls]
Homepage = "https://github.com/wyattowalsh/riso"
Documentation = "https://github.com/wyattowalsh/riso/tree/main/docs"
Repository = "https://github.com/wyattowalsh/riso"
Issues = "https://github.com/wyattowalsh/riso/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pylint>=3.0,<4.0",
    "pip-audit>=2.10.0",
    "pyyaml>=6.0",
    "copier>=9.1.0",
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "pyyaml>=6.0",
]
docs = [
    "sphinx>=8.0",
    "shibuya>=2024.12",
    "myst-parser>=4.0",
    "sphinx-autobuild>=2024.10",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-tabs>=3.4",
    "sphinx-togglebutton>=0.3",
    "sphinxemoji>=0.3",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-autodoc-typehints>=2.0",
    "autoclasstoc>=1.7",
    "sphinx-click>=5.0",
    "sphinx-jsonschema>=1.19",
    "sphinxcontrib-httpdomain>=1.8",
    "sphinx-git>=11.0",
    "sphinx-hoverxref>=1.4",
    "sphinx-sitemap>=2.6",
    "sphinx-notfound-page>=1.0",
    "pyyaml>=6.0",
    "linkify-it-py>=2.0",
]
mcp = [
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "copier>=9.1.0",
    "jinja2>=3.0",
]
tui = [
    "textual>=0.85.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "copier>=9.1.0",
]

[tool.pytest.ini_options]
# Test discovery patterns - defines where and how pytest finds test files
testpaths = ["tests"]                           # Only search for tests in the tests/ directory
python_files = ["test_*.py", "*_test.py"]       # Match both test_foo.py and foo_test.py naming conventions
python_functions = ["test_*"]                   # Only functions starting with 'test_' are treated as tests

# Default command-line options applied to every pytest run
# To override: use --override-ini or explicit CLI flags
addopts = [
    "--strict-markers",                         # Fail on unknown @pytest.mark.* decorators to catch typos
    "--strict-config",                          # Fail on invalid pytest configuration to catch errors early
    "-ra",                                      # Show extra test summary info: (r)easons for (a)ll non-passed tests
                                               # Displays failures, errors, skipped tests, and their reasons
    "-n", "auto",                              # Parallel execution: auto-detect CPU count for optimal parallelization
                                               # Requires pytest-xdist. Override with '-n 0' for sequential execution
    "--randomly-seed=last",                     # Randomize test order to detect hidden dependencies between tests
                                               # Uses last run's seed for reproducibility. Requires pytest-randomly
                                               # Use '--randomly-seed=<number>' to manually set seed
    "--tb=short",                              # Shorter traceback format (excludes local variables)
                                               # Use '--tb=long' for detailed output or '--tb=native' for Python format
]

# Test categorization markers for selective test execution
# Use with: pytest -m "marker_name" to run specific categories
# Combine with: pytest -m "unit and not slow" for complex selection
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "docker: marks tests that require Docker",
]

# Warning filter configuration - controls how warnings are treated during tests
# Format: "action:message:category:module:lineno"
filterwarnings = [
    "error",                                    # Convert all warnings to errors to enforce clean code
                                               # Ensures warnings are addressed, not ignored
    "ignore::DeprecationWarning",              # Allow DeprecationWarnings from dependencies we don't control
                                               # Remove once dependencies are updated
]

# Console logging configuration - displays logs in real-time during test execution
log_cli = true                                 # Enable live logging to console during test runs
log_cli_level = "INFO"                         # Minimum log level to display (DEBUG, INFO, WARNING, ERROR, CRITICAL)
                                               # Override with --log-cli-level=DEBUG for verbose output
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"  # Log format with timestamp and level
log_cli_date_format = "%Y-%m-%d %H:%M:%S"      # ISO 8601-style timestamp format for log entries

[tool.coverage.run]
# Coverage measurement configuration for pytest-cov and coverage.py
# Run with: pytest --cov or coverage run -m pytest
branch = true                                   # Measure branch coverage, not just line coverage
                                               # Ensures both if/else paths are tested
source = ["src/riso", "scripts", "template/hooks"]  # Source code directories to measure coverage for
                                               # Excludes external dependencies and test code
omit = ["*/__pycache__/*", "*/tests/*"]        # Exclude patterns from coverage measurement
                                               # Prevents test code and cache files from inflating metrics
relative_files = true                          # Use relative file paths in coverage data
                                               # Improves portability across different environments
parallel = true                                # Enable parallel coverage collection for pytest-xdist
                                               # Combines coverage from parallel test runs
                                               # Use 'coverage combine' to merge .coverage.* files

[tool.coverage.report]
# Coverage reporting configuration - controls how results are displayed
# Generate report with: coverage report or pytest --cov-report=term
fail_under = 90                                # Minimum coverage percentage required (90%)
                                               # Tests fail if coverage drops below this threshold
                                               # Aligns with documented coverage target in README.md
show_missing = true                            # Show line numbers of uncovered code
                                               # Helps identify gaps in test coverage
skip_covered = false                           # Include fully covered files in report
                                               # Set to true to only show files needing attention
precision = 2                                  # Decimal places for coverage percentages (e.g., 85.42%)
exclude_lines = [
    "pragma: no cover",                        # Explicitly exclude lines marked with this comment
                                               # Use for defensive code that's hard to test
    "if TYPE_CHECKING:",                       # Exclude type-checking only imports
                                               # These blocks never execute at runtime
    "raise NotImplementedError",               # Exclude abstract method placeholders
                                               # These are meant to be overridden by subclasses
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riso"]
